--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
     <a class="square lightbox_trigger"></a>
   </div>
   <div id="lightbox">
+    <button id="btn_prev"></button>
     <div id="content">
         <img src="" />
+        
     </div>
+    <button id="btn_next"></button>
   </div>
 </body>
 </html>
