--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
     <a class="square lightbox_trigger"></a>
   </div>
   <div id="lightbox">
-    <button id="btn_prev"></button>
+    <div class="button" id="btn_prev"></div>
+    <div class="button" id="btn_next"></div>
     <div id="content">
-        <img src="" />
-        
+        <img src="">
     </div>
-    <button id="btn_next"></button>
   </div>
 </body>
 </html>
