hover animations, switched to 6 photos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="vendor/arrownav.css">
+    <link rel="stylesheet" href="vendor/hovereffect.css">
   </head>
 <body>
   <div class="svg-wrap">
@@ -19,17 +20,15 @@
       </svg>
     </div>
 
-  <input type="text" id="search">
+  <input type="text" id="search" placeholder="san francisco">
 
   <div class="gallery">
-    <a class="square lightbox_trigger"></a>
-    <a class="square lightbox_trigger"></a>
-    <a class="square lightbox_trigger"></a>
-    <a class="square lightbox_trigger"></a>
-    <a class="square lightbox_trigger"></a>
-    <a class="square lightbox_trigger"></a>
-    <a class="square lightbox_trigger"></a>
-    <a class="square lightbox_trigger"></a>
+    <figure class="square effect-bubba lightbox_trigger"></figure>
+    <figure class="square effect-bubba lightbox_trigger"></figure>
+    <figure class="square effect-bubba lightbox_trigger"></figure>
+    <figure class="square effect-bubba lightbox_trigger"></figure>
+    <figure class="square effect-bubba lightbox_trigger"></figure>
+    <figure class="square effect-bubba lightbox_trigger"></figure>
   </div>
 
   <div id="lightbox">
