fixed loop on grabbing images, changed to boston default

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </svg>
     </div>
 
-  <input type="text" id="search" placeholder="san francisco">
+  <input type="text" id="search" placeholder="boston">
 
   <div class="gallery">
     <figure class="square effect-bubba lightbox_trigger"></figure>
