--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <svg width="64" height="64" viewBox="0 0 64 64">
         <path id="arrow-right-1" d="M17.919 55.738c-0.858 0.867-0.858 2.266 0 3.133s2.243 0.867 3.101 0l25.056-25.302c0.858-0.867 0.858-2.269 0-3.133l-25.056-25.306c-0.858-0.867-2.243-0.867-3.101 0s-0.858 2.266 0 3.133l22.848 23.738-22.848 23.738z" />
       </svg>
+      <svg width="64" height="64" viewBox="0 0 612 792">
+        <path id="close" fill="#FFFFFF" d="M365.7,396l234-233.9c16.4-16.5,16.4-43.3,0-59.7c-16.5-16.5-43.3-16.5-59.7,0L306,336.2L72.1,102.4
+        c-16.5-16.5-43.3-16.5-59.7,0s-16.5,43.3,0,59.7L246.2,396L12.4,630c-16.5,16.4-16.5,43.3,0,59.7c16.5,16.4,43.3,16.4,59.7,0
+        l233.9-234l234,234c16.4,16.4,43.3,16.4,59.7,0c16.4-16.5,16.4-43.3,0-59.7L365.7,396z"/>
+      </path>
     </div>
 
   <input type="text" id="search" placeholder="boston">
@@ -47,9 +52,9 @@
         </div>
       </a>
     </nav>
-
+    <svg class="close_icon" width="25" height="25" viewBox="0 0 612 792"><use xlink:href="#close"></svg>
     <div id="content">
-        <img src="">
+        <img id="photo" src="">
     </div>
   </div>
 </body>
